--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -48,6 +48,22 @@
 			<version>1.5.7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+			<version>2.2.9.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -70,5 +86,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
